[gd_scene load_steps=2 format=3 uid="uid://bg2g2ca2xolm6"]

[ext_resource type="Script" uid="uid://dp0wsa8wfdqqp" path="res://assets/element/entity/eye/eye.gd" id="1_3cmq8"]

[node name="Eye" type="Node3D"]
script = ExtResource("1_3cmq8")

[node name="VisionRangeLight" type="OmniLight3D" parent="."]
unique_name_in_owner = true
process_priority = 1
process_physics_priority = 1
layers = 1048575
light_color = Color(0, 0, 0, 1)
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_specular = 16.0
shadow_enabled = true
omni_range = 32.0
omni_attenuation = 3.5

[node name="BlindnessRangeLight" type="OmniLight3D" parent="."]
unique_name_in_owner = true
process_priority = 1
process_physics_priority = 1
visible = false
layers = 1048575
light_color = Color(0, 0, 0, 1)
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_specular = 16.0
shadow_enabled = true
omni_range = 32.0
omni_attenuation = 3.5

[node name="DarkvisionLight" type="OmniLight3D" parent="."]
unique_name_in_owner = true
process_priority = 1
process_physics_priority = 1
visible = false
layers = 1048575
light_indirect_energy = 0.0
light_volumetric_fog_energy = 0.0
light_specular = 0.0
shadow_enabled = true
